[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volumeraytracer"
version = "0.1.0"
description = "A volume raytracer"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Paul Stahr", email="paul.stahr@caesar.de" }
]
dependencies = ["numpy"]

[project.urls]
"Homepage" = "https://github.com/PaulStahr/VolumeRaytracer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
